libgfortran: [PR114304] Revert portion of PR105347 change.

PR libfortran/105437
	PR libfortran/114304

libgfortran/ChangeLog:

	* io/list_read.c (eat_separator): Remove check for decimal
	point mode and semicolon used as a seprator. Removes
	the regression.

gcc/testsuite/ChangeLog:

	* gfortran.dg/pr105473.f90: Add additional checks to address
	the case of semicolon at the end of a line.